--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: crystal
+env:
+  - DRAWBOT_ENV=test
+script:
+  - crystal tool format --check src
+  - crystal tool format --check spec
+  - crystal spec
